# auth_service/api/v1/blueprint.py
@@ -1,6 +1,8 @@
 from flask import Blueprint
 from .roles import create_role, delete_role, change_role, roles_list
-from .users import register_new_user, login_user
+from .users_roles import users_roles, assign_role, detach_role
+from .account import sign_up, login, logout, refresh, login_history,\
+    change_login, change_password
 
 blueprint = Blueprint("api/v1", __name__)
 
@@ -27,10 +29,62 @@ blueprint.add_url_rule(
 blueprint.add_url_rule(
     '/register',
     methods=["POST"],
-    view_func=register_new_user,
+    view_func=sign_up,
 )
 blueprint.add_url_rule(
     '/login',
     methods=["POST"],
-    view_func=login_user,
+    view_func=login,
+)
+
+blueprint.add_url_rule(
+    '/users_roles',
+    methods=["GET"],
+    view_func=users_roles,
+)
+blueprint.add_url_rule(
+    '/assign_role',
+    methods=["POST"],
+    view_func=assign_role,
+)
+blueprint.add_url_rule(
+    '/detach_role',
+    methods=["DELETE"],
+    view_func=detach_role,
+)
+
+blueprint.add_url_rule(
+    '/change_login',
+    methods=["POST"],
+    view_func=change_login,
+)
+blueprint.add_url_rule(
+    '/change_password',
+    methods=["POST"],
+    view_func=change_password,
+)
+blueprint.add_url_rule(
+    '/login',
+    methods=["POST"],
+    view_func=login,
+)
+blueprint.add_url_rule(
+    '/login_history',
+    methods=["GET"],
+    view_func=login_history,
+)
+blueprint.add_url_rule(
+    '/logout',
+    methods=["DELETE"],
+    view_func=logout,
+)
+blueprint.add_url_rule(
+    '/refresh',
+    methods=["GET"],
+    view_func=refresh,
+)
+blueprint.add_url_rule(
+    '/sign_up',
+    methods=["POST"],
+    view_func=sign_up,
 )
